[package]
name = "vulkano"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
edition = "2018"
default-run = "vulkano"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
winit = "0.22.1"
vulkano-win = "0.18.0"
vulkano-shaders = "0.18.0"
