[package]
name = "vulkano"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
edition = "2018"
default-run = "vulkano"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19.0"
winit = "0.23.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
image = "0.23.11"
